Fixed small concurrency errors and nullptr